# bunker_extras

bunker_description/: CMakeLists.txt  package.xml
bunker_description/launch/: bunkerPro_description.launch  description.launch
bunker_description/meshes/: BunkerPro_Body.dae  BunkerPro_Collision.stl  BunkerPro_Tracks.dae  Bunker_Body.dae  Bunker_Collision.stl  Bunker_Cover.dae  Bunker_Tracks.dae
bunker_description/urdf/: bunker.urdf.xacro  bunkerPro.urdf.xacro
bunker_viz/: CMakeLists.txt  package.xml
bunker_viz/launch/: view_bunker_model.launch  view_bunker_pro_model.launch  view_robot.launch
bunker_viz/rviz/: robot.rviz
